# editor-backend

./: .railwayignore  Dockerfile  README.md  package-lock.json  package.json  railway.json  tsconfig.json
config/: cloudflared-gemma.yml  external-retention-calibration.json
prisma/: schema.prisma  seed.ts
scripts/: add-db.ts  add-stripe.ts  add-supabase.ts  binge_edit_planner.py  comp-upgrade.js  env-wizard.ts  evaluate-vibecut-planner.ts  faster_whisper_transcribe.py  hook-probe-temp.ts  install-caption-runtime.js  llama_local_4bit_server.py  mediapipe_corner_face_scan.py  postinstall.js  railway-up.ps1  railway-up.sh  requeue-stuck-analyzing.js  requirements-vibecut.txt  rerender-local.ts  reset-usage-monthly.ts  setup-cloudflare-tunnel.ts  setup-gemma-local.ts  setup-llama-local.ts  setup-llama405b-hf.ps1  setup.ts  start-worker.js  start.js  test-algorithm-control-room.ts  test-editor-instructions.ts  test-retention-enforcer.ts  test-uniqueness-benchmark.ts  tune-emotional-real-clips.ts  validate-render-pipelines.ts  verify.ts  vertical_clip_preview.py  vibecut_frame_scanner.py  vibecut_moviepy_pipeline.py  worker-supervisor.js
scripts/fixtures/: authoritative-hook-repeat-case.json
src/: app.ts  index.ts  prisma.ts  realtime.ts  stripeClient.ts  supabaseClient.ts  worker.ts
src/db/: prisma.ts
src/lib/: aiService.ts  env.ts  (+16 more)
worker-cpp/: CMakeLists.txt  Dockerfile  README.md
worker-cpp/deploy/: ae-worker.service  build-image.sh  docker-compose.gpu.yml  run-worker.sh  worker.env.example
worker-cpp/src/: cuda_kernels.cu  cuda_kernels.h  worker_main.cpp
(+79 files in other folders)
